# chess

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: clang-tidy.cmake  gtest.cmake  lexy.cmake
src/: CMakeLists.txt  main.cc  main.cxx
src/chess++/: CMakeLists.txt  bitboard.cc  bitboard.h  board.cc  board.cxx  board.h  board.hxx  chess.h  constants.cxx  constants.h  constants.hxx  core.h  core.hxx  fen.cc  fen.h  fmt.cc  fmt.h  move.cc  move.cxx  move.h  move.hxx  piece.cc  piece.cxx  piece.h  piece.hxx  piece_list.cxx  piece_list.hxx  ply.cc  ply.cxx  ply.h  ply.hxx  square.cc  square.cxx  square.h  square.hxx  types.cxx  types.hxx
tests/: CMakeLists.txt  constants.cc  constants.cxx
